tests/bad/map_literal.glaz
fn main() {
	_ = map<str, i32>{};
}
